--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-router-dom": "^4.3.1",
+    "react-router-transition": "^1.2.1",
+    "react-scripts": "2.1.3",
+    "styled-components": "^4.1.3",
+    "styled-reset": "^1.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
