--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-transition": "^1.2.1",
     "react-scripts": "2.1.3",
+    "react-styled-flexboxgrid": "^3.0.0",
     "styled-components": "^4.1.3",
     "styled-reset": "^1.6.4"
   },
